--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:name=".ui.LoginActivity"
             android:label="@string/app_name" >
         </activity>
+
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name" >
@@ -52,19 +53,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="com.baidu.lbsapi.API_KEY"
-            android:value="V8GryXnQL1nCHyIECQZbirSF" />
-
         <activity
             android:name=".ui.user.UserInfoActivity"
             android:label="@string/title_activity_user_info" >
         </activity>
         <activity
+            android:name=".ui.user.UserRegisterActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
             android:name="cn.fuego.eshoping.ui.home.ProductSearchActivity"
             android:label="@string/title_activity_product_search" >
         </activity>
+        
+        
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="V8GryXnQL1nCHyIECQZbirSF" />
+
+
     </application>
 
 </manifest>
