--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -30,7 +30,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar" >
+        
+         android:theme="@style/DefualtTheme.Light">
         <activity
             android:name=".ui.LoginActivity"
             android:label="@string/app_name" >
