修复首页viewpager 多余标题栏bug

--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -30,8 +30,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        
-         android:theme="@style/DefualtTheme.Light">
+        android:theme="@android:style/Theme.Black.NoTitleBar"
+       
+         >
         <activity
             android:name=".ui.LoginActivity"
             android:label="@string/app_name" >
