--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -47,7 +47,7 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="cn.fuego.laundry.ui.MainTabbarActivity"
+            android:name=".ui.MainTabbarActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -64,9 +64,10 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="cn.fuego.eshoping.ui.home.ProductSearchActivity"
-            android:label="@string/title_activity_product_search" >
+            android:name=".ui.order.OrderActivity"
+            android:label="@string/app_name" >
         </activity>
+ 
         
         
         <meta-data
