--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -63,6 +63,11 @@
             android:name=".ui.user.UserRegisterActivity"
             android:label="@string/app_name" >
         </activity>
+        
+       <activity
+            android:name=".ui.order.OrderListActivity"
+            android:label="@string/app_name" >
+        </activity>
         <activity
             android:name=".ui.order.OrderActivity"
             android:label="@string/app_name" >
