--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -35,6 +35,11 @@
        
          >
         <activity
+            android:name="cn.fuego.misp.ui.common.MispModifyPwdActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
+        <activity
             android:name=".ui.LoginActivity"
             android:label="@string/app_name" >
         </activity>
@@ -60,6 +65,12 @@
             android:name=".ui.user.UserInfoActivity"
             android:label="@string/title_activity_user_info" >
         </activity>
+        
+       <activity
+            android:name=".ui.user.UserEditActivity"
+            android:label="@string/title_activity_user_info" >
+        </activity>
+       
         <activity
             android:name=".ui.user.UserRegisterActivity"
             android:label="@string/app_name" >
