--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -38,7 +38,11 @@
             android:name="cn.fuego.misp.ui.common.MispModifyPwdActivity"
             android:label="@string/app_name" >
         </activity>
-        
+        <activity
+            android:name="cn.fuego.misp.ui.common.MispImageActivity"
+            android:label="@string/app_name" >
+        </activity>
+       
         <activity
             android:name=".ui.LoginActivity"
             android:label="@string/app_name" >
@@ -84,7 +88,10 @@
             android:name=".ui.order.OrderActivity"
             android:label="@string/app_name" >
         </activity>
- 
+         <activity
+            android:name=".ui.order.OrderDetailActivity"
+            android:label="@string/app_name" >
+        </activity>
         <activity
             android:name=".ui.upgrade.UpgradeActivity"
             android:label="@string/app_name" >
