--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -21,6 +21,17 @@
 	<uses-permission android:name="android.permission.WRITE_SETTINGS" />  
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
      <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />  
+	<uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>  
+	
+	  
+
+		<uses-permission android:name="android.permission.INTERNET"/>
+		<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+		<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+		<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+		<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+		<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+		<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
 	
     <uses-sdk
         android:minSdkVersion="15"
@@ -34,6 +45,18 @@
         android:name="cn.fuego.laundry.ui.LaundryApp"
        
          >
+         <!-- baidu loaction config -->
+        <service 
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote"
+            android:exported="false">
+            <intent-filter >
+                <action android:name="com.baidu.location.service"
+                    android:exported="false"/>
+            </intent-filter>
+        </service>
+        
         <activity
             android:name="cn.fuego.misp.ui.common.MispModifyPwdActivity"
             android:label="@string/app_name" >
@@ -90,6 +113,14 @@
         </activity>
          <activity
             android:name=".ui.order.OrderDetailActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".ui.order.AddrEditActivity"
+            android:label="@string/app_name" >
+        </activity> 
+        <activity
+            android:name=".ui.order.OrderEditActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
