--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -56,6 +56,11 @@
                     android:exported="false"/>
             </intent-filter>
         </service>
+       
+        <activity
+            android:name="cn.fuego.misp.ui.common.upgrage.UpgradeActivity"
+            android:label="@string/app_name" >
+        </activity>
         
         <activity
             android:name="cn.fuego.misp.ui.common.MispModifyPwdActivity"
@@ -66,6 +71,11 @@
             android:label="@string/app_name" >
         </activity>
        
+        <activity
+            android:name="cn.fuego.misp.ui.common.alipay.MispPayActivity"
+            android:label="@string/app_name" >
+        </activity>
+        
         <activity
             android:name=".ui.LoginActivity"
             android:label="@string/app_name" >
@@ -123,11 +133,7 @@
             android:name=".ui.order.OrderEditActivity"
             android:label="@string/app_name" >
         </activity>
-        <activity
-            android:name=".ui.upgrade.UpgradeActivity"
-            android:label="@string/app_name" >
-        </activity>
-        
+ 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="V8GryXnQL1nCHyIECQZbirSF" />
