--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -3,7 +3,10 @@
     package="cn.fuego.laundry"
     android:versionCode="1"
     android:versionName="1.0" >
-
+	
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="18" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />  
@@ -22,21 +25,13 @@
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
      <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />  
 	<uses-permission android:name="android.permission.CALL_PHONE"></uses-permission>  
-	
-	  
-
-		<uses-permission android:name="android.permission.INTERNET"/>
-		<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-		<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-		<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-		<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-		<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-		<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
-	
-    <uses-sdk
-        android:minSdkVersion="15"
-        android:targetSdkVersion="18" />
-
+ 	 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	 <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+	 <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	 <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+	 <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+	 <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+ 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -56,9 +51,17 @@
                     android:exported="false"/>
             </intent-filter>
         </service>
-       
+ 
+        <!-- alipay activity -->
+       <activity
+            android:name="com.alipay.sdk.app.H5PayActivity"
+            android:configChanges="orientation|keyboardHidden|navigation"
+            android:exported="false"
+            android:screenOrientation="behind"
+            android:windowSoftInputMode="adjustResize|stateHidden" >
+        </activity>
         <activity
-            android:name="cn.fuego.misp.ui.common.upgrage.UpgradeActivity"
+            android:name="cn.fuego.misp.ui.common.upgrade.UpgradeActivity"
             android:label="@string/app_name" >
         </activity>
         
