--- a/code/app/ios/Laundry/Podfile
+++ b/code/app/ios/Laundry/Podfile
@@ -8,3 +8,4 @@ pod 'AFNetworking'
 pod 'UIAlertView-Blocks', '~> 1.0'
 pod 'SDWebImage', '~> 3.7.1'
 pod 'libPhoneNumber-iOS', '~> 0.7.5'
+pod 'OpenSSL', '~> 1.0.200'
