UI修改基本完成

--- a/code/app/ios/Laundry/Podfile
+++ b/code/app/ios/Laundry/Podfile
@@ -9,3 +9,4 @@ pod 'UIAlertView-Blocks', '~> 1.0'
 pod 'SDWebImage', '~> 3.7.1'
 pod 'libPhoneNumber-iOS', '~> 0.7.5'
 pod 'OpenSSL', '~> 1.0.200'
+pod 'ZBUtilities', '~> 0.0.4'
