增加启动页面

--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -89,8 +89,13 @@
         </activity>
 
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.StartActivity"
             android:label="@string/app_name" >
+                        <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".ui.home.HomeProductActivity"
@@ -98,12 +103,9 @@
         </activity>
         <activity
             android:name=".ui.MainTabbarActivity"
+        
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ui.user.UserInfoActivity"
