--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -103,7 +103,8 @@
         </activity>
         <activity
             android:name=".ui.MainTabbarActivity"
-        
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name" >
 
         </activity>
@@ -146,7 +147,7 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="V8GryXnQL1nCHyIECQZbirSF" />
-
+     
 
     </application>
 
