--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -36,7 +36,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppBaseTheme"
+        android:theme="@android:style/Theme.Black.NoTitleBar"
         android:name="cn.fuego.laundry.ui.LaundryApp"
        
          >
