增加帮助页面，信息显示，新手指引，修改日期显示，价格显示bug

--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -69,12 +69,16 @@
             android:name="cn.fuego.misp.ui.common.MispModifyPwdActivity"
             android:label="@string/app_name" >
         </activity>
+         <activity
+            android:name="cn.fuego.misp.ui.common.MispWebViewActivity"
+            android:label="@string/app_name" >
+        </activity>
         <activity
             android:name="cn.fuego.misp.ui.common.edit.MispTextEditActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="cn.fuego.misp.ui.common.MispImageActivity"
+            android:name="cn.fuego.misp.ui.common.display.MispImageActivity"
             android:label="@string/app_name" >
         </activity>
        
