--- a/code/app/andriod/Laundry/AndroidManifest.xml
+++ b/code/app/andriod/Laundry/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.fuego.laundry"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="2"
+    android:versionName="1.01" >
 	
     <uses-sdk
         android:minSdkVersion="15"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="21" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />  
@@ -31,7 +31,8 @@
 	 <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 	 <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
 	 <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
- 
+     <uses-permission android:name="android.permission.RESTART_PACKAGES" />
+     
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
